--- a/codeclimate.yml
+++ b/codeclimate.yml
@@ -5,3 +5,10 @@ languages:
   Python: true
 exclude_paths:
 - "modules/stanford_person_views/stanford_person_views.views_default.inc"
+- "modules/stanford_person_views/stanford_person.ds.inc"
+- "modules/stanford_person_views/stanford_person.features.field_base.inc"
+- "modules/stanford_person_views/stanford_person.features.field_instance.inc"
+- "modules/stanford_person_views/stanford_person.features.taxonomy.inc"
+- "modules/stanford_person_views/stanford_person.views_default.inc"
+
+
